syntax = "proto3";
package game;

message playerInfoS {
	int32 id = 1;
}

message playerInfoR {
	int32 id = 1;
	string name = 2;
}

